Patch from David Earlam for XERCESC-1363.  Increase size of BaseRefVectorOf based on size of data not by 32.

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/trunk@176341 13f79535-47bb-0310-9956-ffa450edef68